--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "babylonjs": "^3.2.0"
+    "babylonjs": "^3.2.0",
+    "normalize-css": "^2.3.1"
   }
 }
