--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "babylonjs": "^3.2.0",
+    "babel-polyfill": "^6.26.0",
+    "babylonjs": "^3.3.0-alpha.8",
     "normalize-css": "^2.3.1"
   }
 }
