--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "babylonjs": "^3.3.0-alpha.8",
-    "normalize-css": "^2.3.1"
+    "normalize-css": "^2.3.1",
+    "seedrandom": "^2.4.3"
   }
 }
