--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "normalize-css": "^2.3.1",
     "seedrandom": "^2.4.3",
     "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   }
 }
